<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?dialogPreferredPadding">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:paddingBottom="?dialogPreferredPadding"
        android:text="@string/what_is_it"/>

        <TextView
            android:id="@+id/what_is_it_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:paddingBottom="?dialogPreferredPadding"
            android:text="@string/what_is_it_explanation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:paddingBottom="?dialogPreferredPadding"
            android:text="@string/how_it_works"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:paddingBottom="?dialogPreferredPadding"
            android:text="@string/how_it_works_explanation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:paddingBottom="?dialogPreferredPadding"
            android:text="@string/credits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:autoLink="web"
            android:paddingBottom="12dp"
            android:text="@string/if_bug_found_open_github_issue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:autoLink="web"
            android:paddingBottom="12dp"
            android:text="@string/github_link"/>

        <TextView
            android:id="@+id/made_with_love_by_jacopo_tediosi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorAlertDialogListItem"
            android:text="@string/made_with_love_by_jacopo_tediosi"/>

    </LinearLayout>

</ScrollView>