<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_generic"
    tools:context=".ui.fragment.SuggestedModsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/l1"
            android:text="@string/what_is_app_name"
            android:textAlignment="viewStart"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingBottom="@dimen/l_75"
            android:text="@string/what_is_it_explanation"
            android:textAlignment="viewStart"
            tools:ignore="VisualLintLongText"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/what_is_it_explanation_beta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingBottom="@dimen/l1"
            android:text="@string/what_is_it_explanation_beta"
            android:textAlignment="viewStart"
            tools:ignore="VisualLintLongText"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/l1"
            android:text="@string/how_it_works"
            android:textAlignment="viewStart"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingBottom="@dimen/l1"
            android:text="@string/how_it_works_explanation"
            android:textAlignment="viewStart"
            tools:ignore="VisualLintLongText"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/l1"
            android:text="@string/credits"
            android:textAlignment="viewStart"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingBottom="@dimen/l1"
            android:text="@string/if_bug_found_open_github_issue"
            android:textAlignment="viewStart"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="@dimen/l_75"
            android:text="@string/github_link"
            android:textAlignment="viewStart"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/made_with_love_by_jacopo_tediosi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_with_love_by_jacopo_tediosi"
            android:textAlignment="viewStart" />

    </LinearLayout>
</ScrollView>