<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_generic"
    tools:context=".ui.fragment.SuggestedModsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/l_50"
            android:text="@string/dialer_app_name"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialer_permission_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/l_25"
            android:layout_marginBottom="@dimen/l_50"
            android:visibility="gone"
            app:cardBackgroundColor="@color/warningColor"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="@dimen/l1"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/dialer_permission_alert"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                tools:targetApi="o" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/l_50"
                    android:layout_toStartOf="@id/force_enable_call_recording_switch"
                    android:text="@string/force_enable_disable_call_recording"
                    android:textAlignment="viewStart" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/force_enable_call_recording_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:enabled="false"
                    android:minHeight="0dp"
                    android:saveEnabled="false"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/l_50"
                    android:layout_toStartOf="@id/silence_call_recording_alerts_switch"
                    android:text="@string/silence_call_recording_alerts"
                    android:textAlignment="viewStart" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/silence_call_recording_alerts_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:enabled="false"
                    android:minHeight="0dp"
                    android:saveEnabled="false"
                    tools:ignore="TouchTargetSizeCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/l_50"
                    android:layout_toStartOf="@id/force_enable_call_screen_switch"
                    android:text="@string/force_enable_call_screen"
                    android:textAlignment="viewStart" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/force_enable_call_screen_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:enabled="false"
                    android:minHeight="0dp"
                    android:saveEnabled="false"
                    tools:ignore="TouchTargetSizeCheck" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>